@@ -3,9 +3,9 @@ Contributors: feedmymedia
 Donate link: https://www.lsdev.biz/product/tour-operator-plugin/
 Tags: tour operator, tour operators, tour, tours, tour itinerary, tour itineraries, accommodation, accommodation listings, destinations, regions, tourism, lsx
 Requires at least: 4.3
-Tested up to: 4.8
+Tested up to: 4.9
 Requires PHP: 7.0
-Stable tag: 1.1.1
+Stable tag: 1.1.2
 License: GPLv3
 
 The Tour Operators plugin brings live availability, bookings, digital itineraries, and other post types tour operators need to succeed.
@@ -63,6 +63,11 @@ Yes you can! Join in on our [GitHub repository](https://github.com/lightspeeddev
 5. A single tour itinerary page.
 
 == Changelog ==
+
+= 1.1.2 =
+* Fix - Changing the "id" to use a sanitized title string, to avoid cached sites pulling through the same gallery for each destination
+* Dev - Added in an option to disable the collapse function on single posts
+* Dev - Updated "Tested up to" WordPress version
 
 = 1.1.1 =
 * Fix - Removed the "prepare" statement from the destinations "filter_countries" function.
