@@ -3,6 +3,7 @@
 ### 1.1.2
 * Fix - Changing the "id" to use a sanitized title string, to avoid cached sites pulling through the same gallery for each destination
 * Dev - Added in an option to disable the collapse function on single posts
+* Dev - Updated "Tested up to" WordPress version
 
 ### 1.1.1
 * Fix - Removed the "prepare" statement from the destinations "filter_countries" function.
